fix center align in mobile devices

--- a/WebContent/stylesheets/stylesheet.css
+++ b/WebContent/stylesheets/stylesheet.css
@@ -119,7 +119,7 @@ form {
 	.content {
 		margin-left: 3.5%;
 		margin-right: 3.5%;
-		text-align: left;
+		text-align: center;
 	}
 	.formfield {
          min-width: 200px;
